# ETSY-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  temp upgrade of etsy file management
.repo-graph/: graph.json
craftdesk_api/: __init__.py  alembic.ini  conftest.py  main.py  pyproject.toml
craftdesk_api/alembic/: env.py
craftdesk_api/alembic/versions/: 0001_initial.py
craftdesk_api/core/: __init__.py  config.py  security.py
craftdesk_api/db/: __init__.py  base.py
craftdesk_api/doc/: DETAILED.md  HIGH_LEVEL.md  SKILL.md
craftdesk_api/models/: __init__.py  api_key.py  etsy_shop.py  gcp_config.py  user.py
craftdesk_api/routers/: __init__.py  auth.py  etsy.py  gcp.py  pipeline.py  prompts.py  review.py  settings.py
craftdesk_api/schemas/: __init__.py  auth.py  etsy.py  gcp.py  pipeline.py  prompts.py  review.py  settings.py
craftdesk_api/services/: __init__.py  etsy_oauth.py  etsy_publisher.py  etsy_scraper.py  gcp_vm.py  pipeline_runner.py  prompt_engine.py
craftdesk_api/tests/: __init__.py  conftest.py  test_auth.py  test_etsy.py  test_gcp.py  test_pipeline.py  test_prompts.py  test_review.py  test_settings.py
craftdesk_web/doc/: DETAILED.md  HIGH_LEVEL.md  SKILL.md
craftdesk_web/src/app/: globals.css  layout.tsx  page.tsx
craftdesk_web/src/app/dashboard/: page.tsx
craftdesk_web/src/app/login/: page.tsx
craftdesk_web/src/app/pipeline/: page.tsx
craftdesk_web/src/app/prompt-studio/: page.tsx
craftdesk_web/src/app/register/: page.tsx
craftdesk_web/src/app/settings/: page.tsx
craftdesk_web/src/app/shops/: page.tsx
craftdesk_web/src/context/: AuthContext.tsx
craftdesk_web/src/lib/: api.ts
doc/: ARCHITECTURE.md  MASTER_MAP.md
etsy mockup creator/src/: generator.py  main.py
etsy mockup creator/web_editor/: server.py
etsy_pipeline/: CONTEXT.md  __init__.py  architecture_overview.md
etsy_pipeline/config/: CONTEXT.md  __init__.py  settings.py
etsy_pipeline/config/doc/: DETAILED.md  HIGH_LEVEL.md  SKILL.md
etsy_pipeline/doc/: DETAILED.md  HIGH_LEVEL.md  SKILL.md
etsy_pipeline/models/: CONTEXT.md  __init__.py  job.py
etsy_pipeline/models/doc/: DETAILED.md  HIGH_LEVEL.md  SKILL.md
etsy_pipeline/pipeline/: CONTEXT.md  __init__.py  orchestrator.py
etsy_pipeline/pipeline/doc/: DETAILED.md  HIGH_LEVEL.md  SKILL.md
etsy_pipeline/resources/: Deepseek_etsy_listing_generator_prompt.txt  ETSY-Listing-Master-Prompt.txt  SKILL.md  image_z_image_turbo1.json
etsy_pipeline/services/: __init__.py  firestore_store.py  gcs_store.py  google_drive.py  mongo_store.py  storage_helper.py
etsy_pipeline/services/doc/: DETAILED.md  HIGH_LEVEL.md  SKILL.md
etsy_pipeline/utils/: CONTEXT.md  __init__.py  exceptions.py  logging.py
etsy_pipeline/utils/doc/: DETAILED.md  HIGH_LEVEL.md  SKILL.md
etsy_pipeline/workers/: CONTEXT.md  __init__.py  bg_removal_worker.py  bg_removal_worker_config.py  csv_worker.py  etsy_worker.py  image_worker.py  image_worker_config.py  metadata_worker.py  metadata_worker_config.py  mockup_worker.py  mockup_worker_config.py  prompt_worker.py  prompt_worker_config.py  upscale_worker.py  upscale_worker_config.py
etsy_pipeline/workers/doc/: DETAILED.md  HIGH_LEVEL.md  SKILL.md  bug_resolver_missing_mockups.md  bug_resolver_mockup_path_resolution_error.md  etsy_upload.md  remove_bg.md  upscale.md
etsy_pipeline/workers/doc/bug_resolvers/: bug_resolver_hero_mockup_theme_name.md
etsy_pipeline/workers/doc/main_modules/: metadata.md  mockups.md
etsy_pipeline/workers/doc/new_features/: implementation_plan_etsy-listing-metadata.md  implementation_plan_etsy_listing_description_formatting.md
plans/: 2026-07-19-agent-legible-codebase.md  2026-07-20-google-drive-oauth.md  2026-07-21-mockups.md  2026-07-21-remove-bg.md  2026-07-21-upscale.md  2026-07-22-metadata-etsy-upload.md  2026-07-23-vm-first-storage-and-cleanup.md  2026-07-24-craftdesk-phase1-plan.md  2026-07-24-craftdesk-saas-platform-architecture.md  2026-07-24-etsy-listing-description-formatting.md  2026-07-24-hero-mockup-theme-name.md  _template.md  task_tracker_UI.md
scripts/: CONTEXT.md  build_graph.py  etsy_oauth.py  run_bg_removal_worker.py  run_etsy_upload.py  run_image_worker.py  run_metadata_worker.py  run_mockup_worker.py  run_prompts.py  run_upscale_worker.py  test_drive_upload.py  test_gcs_upload.py
scripts/doc/: DETAILED.md  HIGH_LEVEL.md  Image_worker.md  SKILL.md
scripts/gcp/: README.md  gpu_vm_create.sh  image_worker.service  vm_startup.sh
tests/: CONTEXT.md  test_csv_worker.py  test_etsy_worker.py  test_metadata_prompt_format.py  test_metadata_worker.py  test_mockup_theme_name.py  test_mongo_store.py  test_prompt_worker.py  test_storage_helper.py
tests/doc/: DETAILED.md  HIGH_LEVEL.md  SKILL.md
(+1 files in other folders)
