[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "craftdesk-api"
version = "0.1.0"
description = "CraftDesk SaaS API — AI-powered Etsy automation platform backend"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Database — PostgreSQL (Neon.tech)
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Security
    "bcrypt>=4.1.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    # Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # HTTP client (Etsy scraper, GCP health checks)
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    # GCP Compute Engine
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    # File handling
    "python-multipart>=0.0.9",
    # CORS
    "starlette>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
include = ["craftdesk_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "N"]
ignore = ["E501", "B008", "N805"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
ignore_missing_imports = true
disallow_untyped_defs = true
